cc-1-9/routes/f5-demo-app-route-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: f5-demo-app-route
    labels:
      name: f5-demo-app-route
    namespace: f5demo
  spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      app: f5-demo-app-route
