cc-1-9/routes/f5-hello-world-deployment.yaml
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: f5-demo-app-route
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: f5-demo-app-route
      spec:
        containers:
        - name: f5-demo-app-route
          image: f5devcentral/f5-hello-world:develop
          ports:
          - containerPort: 8080
            protocol: TCP
  ---
  apiVersion: v1
  kind: Service
  metadata:
    name: f5-demo-app-route
    labels:
      name: f5-demo-app-route
    namespace: f5demo
  spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      app: f5-demo-app-route
